--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ cipher.spec
 comple.bat
 cipher/__pycache__
 example_plugin/__pycache__
-plugins/*/__pycache__
+plugins/neofetch/__pycache__
 dist
 visualstudio
