--- a/plugins/neofetch/plugin.yml
+++ b/plugins/neofetch/plugin.yml
@@ -2,7 +2,7 @@ configversion: 1
 version: 30
 # The name must match the folder of the plugin
 name: neofetch
-displayname: "Neofetch"
+displayname: "neofetch"
 class: neofetch
 dependencies: #Put your dependencies here cipheros will install them so your plugin can use them
 #  - requests
