Published cipher.exe and fixed tabcompleter issue with pyinstaller

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ comple.bat
 cipher/__pycache__
 example_plugin/__pycache__
 plugins/neofetch/__pycache__
-dist
+dist/plugins
+dist/data
 visualstudio
