--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ colorama==0.4.6
 paramiko==3.5.0
 progressbar33==2.4
 prompt_toolkit==3.0.48
-pyinputplus==0.2.12
+PyInputPlus==0.2.12
 PyYAML==6.0.2
 PyYAML==6.0.2
 Requests==2.32.3
