Fixing Network Scan

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,13 @@
-Brotli==1.1.0
-certifi==2024.8.30
-cffi==1.17.1
 colorama==0.4.6
-cryptography==43.0.3
-hpack==4.0.0
-hyperframe==6.0.1
-idna==3.10
-js==1.0
 paramiko==3.5.0
 progressbar33==2.4
 prompt_toolkit==3.0.48
+psutil==6.0.0
 PyInputPlus==0.2.12
-pyOpenSSL==24.2.1
 PyYAML==6.0.2
 PyYAML==6.0.2
-scapy==2.6.1
-simplejson==3.19.3
-speedups==1.4.0
-typing_extensions==4.12.2
-wheel==0.45.0
-win_inet_pton==1.1.0
-    
+Requests==2.32.3
+urllib3==2.2.3
+websockets==13.1
+wheel==0.45.1
+python3-nmap
