--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install pyinstaller
+        run: pip install pyinstaller
+
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
