--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -23,27 +23,34 @@ jobs:
         with:
           python-version: '3.10'
 
+      # Step 3: Install PyInstaller
       - name: Install pyinstaller
         run: pip install pyinstaller
 
+      # Step 4: Install Dependencies
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 3: Execute Compilation Script
+      # Step 5: Execute Compilation Script based on OS
       - name: Run Compilation Script
         run: |
           if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            compile.bat
-          else
-            bash compile.sh
+            echo "Compiling for Windows..."
+            pyinstaller --onefile your_script.py --distpath dist/windows
+          elif [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
+            echo "Compiling for Linux..."
+            pyinstaller --onefile your_script.py --distpath dist/linux
+          elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
+            echo "Compiling for macOS..."
+            pyinstaller --onefile your_script.py --distpath dist/macos
           fi
 
-      # Step 4: Test Initialization of Compiled Executable
+      # Step 6: Test Initialization of Compiled Executable
       - name: Test Initialization
         run: |
-          EXECUTABLE="./dist/your_script"
+          EXECUTABLE="./dist/${{ matrix.os }}/your_script"
           if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
             EXECUTABLE="${EXECUTABLE}.exe"
           fi
@@ -57,9 +64,9 @@ jobs:
           # Run the executable with --debug to test initialization
           $EXECUTABLE --debug || (echo "Error: Program failed during initialization!" && exit 1)
 
-      # Step 5: Upload Build Artifacts
-      - name: Upload Build
+      # Step 7: Upload Build Artifacts
+      - name: Upload Build Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.os }}-build
-          path: dist/
+          path: dist/${{ matrix.os }}
