--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -39,20 +39,20 @@ jobs:
         run: |
           if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
             echo "Compiling for Windows..."
-            pyinstaller main.py --distpath dist/${{ matrix.os }}/ --hidden-import=yaml --hidden-import=yaml --exclude-module=pygame --exclude-module=PyQt5 --exclude-module=PySide6 --onefile --icon="./icon.ico" --name="cipheros"
+            pyinstaller main.py --distpath distworkflow/${{ matrix.os }}/ --hidden-import=yaml --hidden-import=yaml --exclude-module=pygame --exclude-module=PyQt5 --exclude-module=PySide6 --onefile --icon="./icon.ico" --name="cipheros"
           elif [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
             echo "Compiling for Linux..."
-            pyinstaller main.py --distpath dist/${{ matrix.os }}/ --hidden-import=yaml --hidden-import=yaml --exclude-module=pygame --exclude-module=PyQt5 --exclude-module=PySide6 --onefile --icon="./icon.ico" --name="cipheros"
+            pyinstaller main.py --distpath distworkflow/${{ matrix.os }}/ --hidden-import=yaml --hidden-import=yaml --exclude-module=pygame --exclude-module=PyQt5 --exclude-module=PySide6 --onefile --icon="./icon.ico" --name="cipheros"
           elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             echo "Compiling for macOS..."
-            pyinstaller main.py --distpath dist/${{ matrix.os }}/ --hidden-import=yaml --hidden-import=yaml --exclude-module=pygame --exclude-module=PyQt5 --exclude-module=PySide6 --onefile --icon="./icon.ico" --name="cipheros"
+            pyinstaller main.py --distpath distworkflow/${{ matrix.os }}/ --hidden-import=yaml --hidden-import=yaml --exclude-module=pygame --exclude-module=PyQt5 --exclude-module=PySide6 --onefile --icon="./icon.ico" --name="cipheros"
           fi
 
       # Step 6: Test Initialization of Compiled Executable
       - name: Test Initialization
         run: |
             if ($env:RUNNER_OS -eq "Windows") {
-              $EXECUTABLE = ".\dist\windows-latest\cipheros.exe"
+              $EXECUTABLE = ".\distworkflow\windows-latest\cipheros.exe"
               if (-Not (Test-Path $EXECUTABLE)) {
                 Write-Error "Error: Compiled executable not found!"
                 exit 1
@@ -68,7 +68,7 @@ jobs:
         
       - name: Test Initialization
         run: |
-          EXECUTABLE="./dist/${{ matrix.os }}/cipheros"
+          EXECUTABLE="./distworkflow/${{ matrix.os }}/cipheros"
           if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
             EXECUTABLE="${EXECUTABLE}.exe"
           fi
@@ -90,4 +90,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.os }}-build
-          path: dist/${{ matrix.os }}
+          path: distworkflow/${{ matrix.os }}
