--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -91,3 +91,18 @@ jobs:
         with:
           name: ${{ matrix.os }}-build
           path: distworkflow/${{ matrix.os }}
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      - name: Add and Commit Changes
+        run: |
+          git add distworkflow/
+          git commit -m "Add compiled binaries for ${{ matrix.os }}"
+        continue-on-error: true  # Avoid failure if no changes are detected
+      
+      - name: Push Changes
+        run: git push origin main
+
