--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -97,12 +97,18 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
+      - name: Fetch Latest Changes
+        run: git fetch origin
+      
+      - name: Merge Latest Changes
+        run: git merge origin/main
+      
       - name: Add and Commit Changes
         run: |
-          git add distworkflow/
-          git commit -m "Add compiled binaries for ${{ matrix.os }}"
-        continue-on-error: true  # Avoid failure if no changes are detected
+          git add dist/
+          git commit -m "Add compiled binaries for ${{ matrix.os }}" || echo "No changes to commit."
       
       - name: Push Changes
         run: git push origin main
+      
 
