--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -35,12 +35,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt pyinstaller
 
-      # Step 4: Determine Architecture
       - name: Detect Architecture
         run: echo "Running on $RUNNER_OS with architecture $RUNNER_ARCH"
         shell: bash
 
-      # Step 5: Execute Compilation Script
       - name: Run Compilation Script
         shell: bash
         run: |
@@ -57,7 +55,6 @@ jobs:
             pyinstaller main.py --distpath "$OUTPUT_DIR" --onefile --icon="./icon.ico" --name="cipheros"
           fi
 
-      # Step 6: Test Initialization
       - name: Test Initialization
         shell: bash
         run: |
@@ -73,32 +70,28 @@ jobs:
 
           $EXECUTABLE --debug || (echo "Error: Program failed during initialization!" && exit 1)
 
-      # Step 7: Upload Build Artifacts
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: "${{ matrix.os }}-${{ matrix.arch }}-build"
           path: "distworkflow/${{ matrix.os }}/${{ matrix.arch }}"
 
-      # Step 8: Configure Git
       - name: Configure Git
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      # Step 9: Merge Changes
-      - name: Fetch and Merge Changes
-        run: |
-          git fetch origin
-          git merge origin/main
+      - name: Fetch Latest Changes
+        run: git fetch origin
 
-      # Step 10: Commit Changes
+      - name: Merge Latest Changes
+        run: git merge origin/main || echo "Nothing to merge."
+      
       - name: Add and Commit Changes
         run: |
-          git add distworkflow/
-          git commit -m "Add compiled binaries for ${{ matrix.os }} (${{ matrix.arch }})" || echo "No changes to commit."
-
-      # Step 11: Push Changes
+          git add dist/
+          git commit -m "Add compiled binaries for ${{ matrix.os }}" || echo "No changes to commit."
+      
       - name: Push Changes
         run: git push origin main
       
