--- a/example_plugin/plugin.yml
+++ b/example_plugin/plugin.yml
@@ -1,10 +1,10 @@
-#Don't change this
-configversion: 2
+# Don't change this
+configversion: 3
 
-#Version of your plugin
+# Version of your plugin
 version: 1
 
-team: ExampleTeam #If you have like a whole team of people that are working on this plugin you can specify it here
+team: ExampleTeam # If you have like a whole team of people that are working on this plugin you can specify it here
 
 authors: # If you have a team of people that are working on this project
 - Example
@@ -12,6 +12,8 @@ authors: # If you have a team of people that are working on this project
 name: example_plugin # The name must match the folder of the plugin
 
 displayname: "Example Plugin" # This is just the displayname of your plugin
+
+description: I am a example plugin! # Description of your plugin
 
 class: ExamplePlugin #This must match the class in the __init__.py class
 
