--- a/.github/workflows/macos-linuxinstaller.yml
+++ b/.github/workflows/macos-linuxinstaller.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install urllib3 progressbar3 colorama requests
+          pip install urllib3 progressbar3 colorama requests pyinstaller
       
       - name: Run Compilation Script
         shell: bash
