Updated automatic builder to include inno setup compiler

--- a/.github/workflows/automatic_cipheros_builder.yml
+++ b/.github/workflows/automatic_cipheros_builder.yml
@@ -27,6 +27,12 @@ jobs:
         with:
           python-version: '3.13'
 
+      - name: Install Inno Setup
+        if: runner.os == 'Windows'
+        run: |
+          choco install innosetup -y
+        shell: cmd
+
       # Step 3: Install Dependencies
       - name: Install Dependencies
         run: |
@@ -69,6 +75,18 @@ jobs:
           fi
 
           $EXECUTABLE --debug --startdir=. || (echo "Error: Program failed during initialization!" && exit 1)
+
+      - name: Package with Inno Setup
+        if: runner.os == 'Windows'
+        run: |
+          # Check architecture and run the appropriate ISS file
+          $arch = if ($env:PROCESSOR_ARCHITECTURE -eq "AMD64") { "x64" } else { "x32" }
+          if ($arch -eq "x64") {
+            "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" inno\installer_x64.iss
+          } else {
+            "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" inno\installer_x32.iss
+          }
+        shell: pwsh
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v3
