Debuging because I cant find what the issue is

--- a/.github/workflows/automatic_cipheros_builder.yml
+++ b/.github/workflows/automatic_cipheros_builder.yml
@@ -73,6 +73,12 @@ jobs:
 
           $EXECUTABLE --debug --startdir=. || (echo "Error: Program failed during initialization!" && exit 1)
 
+      - name: Debug File Locations
+        run: ls -la ./distworkflow
+    
+      - name: Debug File Locations 2
+        run: ls -la ./
+
       - name: Package with Inno Setup
         if: runner.os == 'Windows'
         run: |
