I cant even with these errors anymore

--- a/.github/workflows/automatic_cipheros_builder.yml
+++ b/.github/workflows/automatic_cipheros_builder.yml
@@ -73,15 +73,18 @@ jobs:
 
           $EXECUTABLE --debug --startdir=. || (echo "Error: Program failed during initialization!" && exit 1)
 
+
+      - name: Print Current Directory (pwsh)
+        run: |
+          Write-Host "Current Directory:"
+          pwd
+        shell: pwsh
+        
       - name: Package with Inno Setup
         if: runner.os == 'Windows'
         run: |
           # Detect architecture
           $arch = if ($env:PROCESSOR_ARCHITECTURE -eq "AMD64") { "x64" } else { "x32" }
-          
-          pwd
-          ls -la ./distworkflow
-          ls -la ./
 
           # Set the path to the ISS file based on architecture
           $issFile = if ($arch -eq "x64") { "inno\\installer_x64.iss" } else { "inno\\installer_x32.iss" }
