Found a issue with the CipherOS directory

--- a/.github/workflows/automatic_cipheros_builder.yml
+++ b/.github/workflows/automatic_cipheros_builder.yml
@@ -14,6 +14,8 @@ jobs:
         exclude:
           - os: windows-latest
             arch: arm64
+          - os: windows-latest
+            arch: x32
     runs-on: ${{ matrix.os }}
 
     steps:
