--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 data
 cipher/__pycache__
 build
-cipher.spec
+cipheros.spec
 cipher/__pycache__
 example_plugin/__pycache__
 plugins/neofetch/__pycache__
