--- a/plugins/et_encrypto/plugin.yml
+++ b/plugins/et_encrypto/plugin.yml
@@ -8,5 +8,5 @@ displayname: "Entech Encrypto"
 description: A encrypting software like 7zip
 class: EntechEncrypto
 dependencies:
-  - cryptography
-  - bcrypt
+#  - cryptography
+#  - bcrypt
