fix plugin stuff
The "hacknet" plugin had some issues, for example the detection of the `ispAdress` using "traceroute" command was not working (for me). I replaced the detection logic and now it should work just fine. The file `Traced.ogg` was also wrongly referenced as "traced.ogg", which caused the "traced" command to crash.
I also changed some error messages for the "plugins" command.
Lastly I also changed the `.gitignore` file to exclude all `__pycache__/` folders ever from being commited.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
-data
+data/
 cipher/__pycache__
 build
 cipheros.spec
-cipher/__pycache__
-example_plugin/__pycache__
-plugins/neofetch/__pycache__
-plugins/hpt/__pycache__
+__pycache__/
+*/__pycache__/
 dist
 visualstudio
 macos/cipher/.DS_Store
 test.py
-plugins/hacknet/__pycache__
 tools
 downloads
 .vscode/launch.json
 releaseprep
 venv/
 typings/
-cipher/elevate/__pycache__/
