--- a/.github/workflows/automatic_cipheros_builder.yml
+++ b/.github/workflows/automatic_cipheros_builder.yml
@@ -88,7 +88,7 @@ jobs:
           
           # Run the Inno Setup Compiler
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" $issFile
-        shell: pwsh
+        shell: pwsh 
       
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
@@ -96,5 +96,44 @@ jobs:
           name: "${{ matrix.os }}-${{ matrix.arch }}-build"
           path: "distworkflow"
           include-hidden-files: true
+  
+  buildreleasepackage:
+    runs-on: ubuntu-latest
+    needs: test-and-build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+    
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: "${{ matrix.os }}-${{ matrix.arch }}-build"
       
-
+      - name: Extract Build Artifacts
+        run: |
+          mkdir -p build
+          tar -xzf "distworkflow.tar.gz" -C build
+      - name: Create Release Package
+        run: |
+          mkdir -p release
+          zip -r release/cipheros_release.zip build
+      - name: Create Release Package for All OS
+        run: |
+          mkdir -p release
+          for os in ubuntu-latest windows-latest macos-latest; do
+          for arch in x64 arm64 x32; do
+            if [[ "$os" == "windows-latest" && ( "$arch" == "arm64" || "$arch" == "x32" ) ]]; then
+              continue
+            fi
+            artifact="${os}-${arch}-build"
+            mkdir -p "build/$artifact"
+            tar -xzf "${artifact}.tar.gz" -C "build/$artifact"
+          done
+            done
+            zip -r release/cipheros_release.zip build
+      
+      - name: Upload Release Package
+        uses: actions/upload-artifact@v4
+        with:
+          path: release/cipheros_release.zip
+          name: cipheros_release_package
