--- a/.github/workflows/automatic_cipheros_builder.yml
+++ b/.github/workflows/automatic_cipheros_builder.yml
@@ -104,10 +104,40 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
     
-      - name: Download Build Artifacts
+      - name: Download macOS x64 Build Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: "${{ matrix.os }}-${{ matrix.arch }}-build"
+          name: "macos-latest-x64-build"
+
+      - name: Download macOS arm64 Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: "macos-latest-arm64-build"
+
+      - name: Download macOS x32 Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: "macos-latest-x32-build"
+
+      - name: Download Ubuntu x64 Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: "ubuntu-latest-x64-build"
+
+      - name: Download Ubuntu arm64 Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: "ubuntu-latest-arm64-build"
+
+      - name: Download Ubuntu x32 Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: "ubuntu-latest-x32-build"
+
+      - name: Download Windows x64 Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: "windows-latest-x64-build"
       
       - name: Extract Build Artifacts
         run: |
