--- a/.github/workflows/automatic_cipheros_builder.yml
+++ b/.github/workflows/automatic_cipheros_builder.yml
@@ -150,11 +150,11 @@ jobs:
             fi
             artifact="${os}-${arch}-executeable"
             tree
-            cd $artifact build
+            cd ./${artifact} build
           done
             done
           
-          cd cipheros.exe build
+          cd ./cipheros.exe build
       
       - name: Create Release Package for All OS
         run: |
