--- a/.github/workflows/automatic_cipheros_builder.yml
+++ b/.github/workflows/automatic_cipheros_builder.yml
@@ -164,5 +164,5 @@ jobs:
       - name: Upload Release Package
         uses: actions/upload-artifact@v4
         with:
-          path: releasebuild.zip
+          path: ./releasebuild.zip
           name: cipheros_release_package
