--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ colorama==0.4.6
 progressbar33==2.4
 prompt_toolkit==3.0.48
 psutil==6.0.0
-PyInputPlus==0.2.12
+#PyInputPlus==0.2.12
 PyYAML==6.0.2
 Requests==2.32.3
 urllib3==2.2.3
